happy up to including 8, accessible and hidden content

--- a/src/docs/asciidoc/road-to-immutability/030-modification.adoc
+++ b/src/docs/asciidoc/road-to-immutability/030-modification.adoc
@@ -2,7 +2,8 @@
 == Modification
 
 ****
-*Definition*: a *method is modifying* if it causes an assignment in the object graph of the fields of the object it is applied to.
+*Definition*: a *method is modifying* if it causes an assignment in the object graph of the fields of the object it is
+applied to.
 ****
 
 We use the term 'object graph' to denote the fields of the object, the fields of these fields, etc., to arbitrary depth.
@@ -120,7 +121,8 @@ public interface Collection<E> extends Iterable<E> {
 Adding an object to a collection (set, list) will cause some assignment somewhere inside the data structure.
 Returning the size of the collection should not.
 
-IMPORTANT: Under supervision of the analyser, you will not be able to create an implementation of this interface which violates the modification rules.
+IMPORTANT: Under supervision of the analyser, you will not be able to create an implementation of this interface
+which violates the modification rules.
 This is intentional: no implementation should modify the data structure when `size` is called.
 
 Adding all elements of a collection to the object (in `addAll`) should not modify the input collection, whence the {nm}.
@@ -129,10 +131,11 @@ Other types in the parameters have not been annotated with {nm}:
 * `Object` because it is immutable;
 * `E` because it is of an unbound generic type, it has the same methods available as `Object`.
 No code visible to implementations of `Collection` can make modifications to `E` without explicit down-casting;
-* `Consumer` because it is a functional interface (an interface with a single abstract method) in `java.util.function`; they are {ignoreModifications} by convention, as explained later.
+* `Consumer` because it is a functional interface (an interface with a single abstract method) in `java.util.function`;
+they are {ignoreModifications} by convention, as explained later.
 
-In order to keep the narrative going, we defer a discussion of modification in the context of parameters of abstract types to the sections
-<<abstract-methods>> and <<hidden-content>>.
+In order to keep the narrative going, we defer a discussion of modification in the context of parameters of abstract
+types to the sections <<abstract-methods>> and <<hidden-content>>.
 Here, we continue with the first use case of modification: containers.
 
 // ensure a newline at the end
