--- a/src/docs/asciidoc/road-to-immutability/020-finalfields.adoc
+++ b/src/docs/asciidoc/road-to-immutability/020-finalfields.adoc
@@ -3,10 +3,12 @@
 Let us start with a definition:
 
 ****
-*Definition*: We say a field is *effectively final* when it either has the modifier `final`, or it is not assigned to in methods that can be transitively called from non-private (non-constructor) methods.
+*Definition*: We say a field is *effectively final* when it either has the modifier `final`, or it is not assigned to
+in methods that can be transitively called from non-private (non-constructor) methods.
 ****
 
-The analyser annotates with {final} in the latter case; there is no point in cluttering with an annotation when the modifier is already there.
+The analyser annotates with {final} in the latter case; there is no point in cluttering with an annotation when the
+modifier is already there.
 Fields that are not effectively final are called _variable_, they can optionally be annotated with {finalAbsent}.
 
 This definition allows effectively final fields to be assigned in methods accessible only from the constructor:
@@ -65,7 +67,8 @@ Note that it is perfectly possible to rewrite the first example in such a way th
 From the point of view of the analyser, this does not matter.
 The wider definition will allow for more situations to be recognized for what they really are.
 
-When an object consists solely of primitives, or deeply immutable objects such as `java.lang.String`, having all fields effectively final is sufficient to generate an object that is again deeply immutable.
+When an object consists solely of primitives, or deeply immutable objects such as `java.lang.String`, having all
+fields effectively final is sufficient to generate an object that is again deeply immutable.
 
 .Example {counter:example}, an object consisting of primitives and a string.
 [[deeply-immutable1]]
@@ -115,7 +118,8 @@ class DeeplyImmutable2 {
 }
 ----
 
-Examples 3 and 4 are functionally equivalent: there is no way of changing the values of the fields once they have been set.
+Examples 3 and 4 are functionally equivalent: there is no way of changing the values of the fields once they have been
+set.
 In the real world there may be a reason why someone requires the getters.
 Or, you may be given code as in Example 2, but you are not allowed to change it.
 Whatever the reason, the analyser should recognize effective finality.
@@ -123,16 +127,19 @@ Whatever the reason, the analyser should recognize effective finality.
 Note that we will not make a distinction between any of the different non-private access modes in Java.
 Only the private modifier gives sufficient guarantees that no reassignment to the fields is possible.
 
-We now have observed that for the purpose of defining immutability, having all your fields effectively final can be sufficient in certain, limited circumstances.
+We now have observed that for the purpose of defining immutability, having all your fields effectively final can be
+sufficient in certain, limited circumstances.
 
 The analyser annotates types which are not immutable, but whose fields are all effectively final, with {finalFields}.
 Types that have at least one variable field are never immutable, and are optionally annotated with {finalFieldsAbsent}.
 
-Note that as of more recent versions of Java, the `record` type enforces explicitly final fields, along with additional support for equality and visibility.
+Note that as of more recent versions of Java, the `record` type enforces explicitly final fields, along with additional
+support for equality and visibility.
 Any `record` will be at least {finalFields}.
 
 We will in this work make a distinction between a property being _effectively_ or _eventually_ present.
-The former indicates a property as computed after construction of the object, which is potentially a little broader than the definition of the language.
+The former indicates a property as computed after construction of the object, which is potentially a little broader
+than the definition of the language.
 The latter is used when this property can only be obtained after the code reaches a certain state.
 More on this later, but here is a first example of type with eventually final fields:
 
@@ -162,9 +169,11 @@ class OneRandom {
 
 Once a value has been set, the field `random` cannot be assigned anymore.
 
-We have just observed that if one restricts to primitives and types like `java.lang.String`, final fields are sufficient to guarantee deep immutability.
+We have just observed that if one restricts to primitives and types like `java.lang.String`, final fields are sufficient
+to guarantee deep immutability.
 It is not feasible, and we do not wish to, work _only_ with deeply immutable objects.
-Moreover, it is easy to see that final fields alone not enough to guarantee what we intuitively may think immutability stands for:
+Moreover, it is easy to see that final fields alone not enough to guarantee what we intuitively may think immutability
+stands for:
 
 .Example {counter:example}, final fields do not guarantee intuitive immutability
 [source,java]
